@@ -20,3 +20,7 @@
 + block drop when resizing
 + set global window title (main window, dialogs)
 + silent close if closed while processing pictures to avoid "Resizing successful" message after main window closing
+- allow to resize in another directory, preventing to overwrite original pictures
++ allow to drop folders (recursively)
++ adding a directory make URL count false, so the progress bar is false
++ display a dialog when resizing process has been interrupted
